<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2014 Philippine Android Developers Community

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/gray_light_light"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:background="@color/gray_light_light"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_devcon_logo"
            android:src="@drawable/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />

            <EditText
                android:id="@+id/edt_email_address"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_emailaddress"
                android:scaleType="centerCrop"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_password"
                android:scaleType="centerCrop"
                android:padding="8dp"
                android:hint="Password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="23sp"
            android:text="Login" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:clickable="true"
            android:text="Forgot Password?" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="Don't have an account? Contact Us" />

        <TextView
            android:id="@+id/txt_support"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:gravity="center"
            android:clickable="true"
            android:text="support@devcon.ph" />
    </LinearLayout>
</ScrollView>